<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".TagCreationFrag">


    <!-- Tag Name -->
    <LinearLayout
        android:id="@+id/layoutAdminCreation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Tag Name label -->
        <TextView
            android:id="@+id/txtAdminName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <!-- Tag Name input -->
        <EditText
            android:id="@+id/inputAdminName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="2"
            android:hint="@string/enter_username"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline" />


    </LinearLayout>

    <!-- Description -->
    <LinearLayout
        android:id="@+id/layoutOrganization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutAdminCreation"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtOrganization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organization" />

        <Spinner
            android:id="@+id/spinnerOrgName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <!-- Password -->
    <LinearLayout
        android:id="@+id/layoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutOrganization"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="@string/enter_password"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <!-- Submit Button -->
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword"
        android:layout_marginTop="16dp" />
    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSubmit"
        android:text="" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSubmit"
        app:layout_constraintVertical_chainStyle="spread_inside" />

</androidx.constraintlayout.widget.ConstraintLayout>
