<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="0dp"
        android:paddingBottom="16dp"
        android:paddingHorizontal="16dp"
        tools:context=".TagCreationFrag">


        <!-- Device Name -->
        <LinearLayout
            android:id="@+id/layoutDeviceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Tag Name label -->
            <TextView
                android:id="@+id/txtDeviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name" />

            <!-- Tag Name input -->
            <EditText
                android:id="@+id/inputDeviceName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="2"
                android:hint="@string/enter_device_name"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline" />

        </LinearLayout>
        <!-- Tag Name -->
        <LinearLayout
            android:id="@+id/layoutTagName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutDeviceName"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Tag Name label -->
            <TextView
                android:id="@+id/txtTagName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_name" />

            <!-- Tag Name input -->
            <EditText
                android:id="@+id/inputTagName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="2"
                android:hint="@string/enter_tag_name"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline" />


        </LinearLayout>

        <!-- location -->
        <LinearLayout
            android:id="@+id/layoutLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutTagName"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <EditText
                android:id="@+id/inputLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/enter_location"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <!-- location -->
        <LinearLayout
            android:id="@+id/layoutLongitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutLatitude"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txtLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Longitude" />

            <EditText
                android:id="@+id/inputLongitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="Enter longitude"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>
        <!-- location -->
        <LinearLayout
            android:id="@+id/layoutLatitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutLocation"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txtLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Latitude" />

            <EditText
                android:id="@+id/inputLatitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="Enter latitude"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <!-- Tag Type -->
        <LinearLayout
            android:id="@+id/layoutTagType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutLongitude"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txtTagType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_type" />

            <Spinner
                android:id="@+id/spinnerTagType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <!-- Tag Type -->
        <LinearLayout
            android:id="@+id/layoutCluster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutTagType"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txtCluster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cluster" />

            <Spinner
                android:id="@+id/spinnerCluster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <!-- floor -->
        <LinearLayout
            android:id="@+id/layoutFloor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutCluster"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txtFloor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor" />

            <EditText
                android:id="@+id/inputFloor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/enter_floor_number"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <!-- Submit Button -->
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutFloor" />

        <Button
            android:id="@+id/setCurrentLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="172dp"
            android:text="Set Current Location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutFloor" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSubmit"
            android:text="" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSubmit"
            app:layout_constraintVertical_chainStyle="spread_inside" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>