<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="0dp"
        android:paddingBottom="16dp"
        android:paddingHorizontal="16dp"
        tools:context=".TagEditFrag">


        <!-- Device Name -->
        <LinearLayout
            android:id="@+id/editLayoutDeviceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Tag Name label -->
            <TextView
                android:id="@+id/editTxtDeviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name" />

            <!-- Tag Name input -->
            <EditText
                android:id="@+id/editInputDeviceName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="2"
                android:hint="@string/enter_device_name"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/editGuideline" />

        </LinearLayout>
        <!-- Tag Name -->
        <LinearLayout
            android:id="@+id/editLayoutTagName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editLayoutDeviceName"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Tag Name label -->
            <TextView
                android:id="@+id/editTxtTagName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_name" />

            <!-- Tag Name input -->
            <EditText
                android:id="@+id/editInputTagName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="2"
                android:hint="@string/enter_tag_name"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/editGuideline" />


        </LinearLayout>

        <!-- location -->
        <LinearLayout
            android:id="@+id/editLayoutLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editLayoutTagName"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/editTxtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <EditText
                android:id="@+id/editInputLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/enter_location"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <!-- location -->
        <LinearLayout
            android:id="@+id/editLayoutLongitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editLayoutLatitude"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/editTxtLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Longitude" />

            <EditText
                android:id="@+id/editInputLongitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="Enter longitude"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>
        <!-- location -->
        <LinearLayout
            android:id="@+id/editLayoutLatitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editLayoutLocation"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/editTxtLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Latitude" />

            <EditText
                android:id="@+id/editInputLatitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="Enter latitude"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <!-- Tag Type -->
        <LinearLayout
            android:id="@+id/editLayoutTagType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editLayoutLongitude"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/editTxtTagType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_type" />

            <Spinner
                android:id="@+id/editSpinnerTagType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <!-- Tag Type -->
        <LinearLayout
            android:id="@+id/editLayoutCluster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editLayoutTagType"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/editTxtCluster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cluster" />

            <Spinner
                android:id="@+id/editSpinnerCluster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <!-- floor -->
        <LinearLayout
            android:id="@+id/editLayoutFloor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editLayoutCluster"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/editTxtFloor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor" />

            <EditText
                android:id="@+id/editInputFloor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:hint="@string/enter_floor_number"
                android:minHeight="48dp"
                android:textColorHint="#8D6E63"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

        <!-- Submit Button -->
        <Button
            android:id="@+id/editBtnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editLayoutFloor" />

        <Button
            android:id="@+id/editSetCurrentLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="172dp"
            android:text="Set Current Location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editLayoutFloor" />

        <TextView
            android:id="@+id/editTxtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editBtnSubmit"
            android:text="" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/editGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/editGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editBtnSubmit"
            app:layout_constraintVertical_chainStyle="spread_inside" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>